# pc

./: LICENSE  Makefile  README.md  pc.py  pyproject.toml
example/: .gitignore  README.md  pc.yaml
test/: pc.yaml  sinus_cosine.py
tests/: test_compile.py  test_content_style.py  test_duplicate_yaml_keys.py  test_group_lookup.py  test_ids.py  test_inline_latex_glyphs.py  test_multi_panel_list.py  test_scaling.py
